# pari

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  README.md  build_and_test.sh  build_and_test_clean.sh  pari.pro  project.md
.github/workflows/: build.yml
assets/: assets.qrc  pari.icns
qml/: AboutWindow.qml  BuildConfigurationDialog.qml  ChatLogWindow.qml  CodeEditorPane.qml  ColorButton.qml  CompletionPopup.qml  CustomStatusBar.qml  ExpandButton.qml  FileInfoDialog.qml  FileTreeDelegate.qml  FindOverlay.qml  GitOutputWindow.qml  GoToLineDialog.qml  LspLogWindow.qml  OutputPane.qml  PariAppWindow.qml  PariTabBar.qml  pari.qml  qml.qrc
src/: CMakeLists.txt  app.pro  buildmanager.cpp  filesystem.cpp  filesystem.h  gitlogmodel.cpp  llm.cpp  llm.h  lspclient.cpp  lspclient.h  lsploghandler.cpp  lsploghandler.h  pari  pari.cpp  qmlsyntaxhighlighter.cpp  qmlsyntaxhighlighter.h  settings.cpp  settings.h  shellsyntaxhighlighter.h  textdocumentsearcher.cpp  toolmanager.cpp
src/app/: buildmanager.cpp  buildmanager.h  cppsyntaxhighlighter.cpp  cppsyntaxhighlighter.h  diffutils.cpp  diffutils.h  filesystem.cpp  filesystem.h  filetreeproxymodel.cpp  filetreeproxymodel.h  gitmanager.cpp  gitmanager.h  llm.cpp  llm.h  markdownformatter.cpp  markdownformatter.h  markdownsyntaxhighlighter.cpp  markdownsyntaxhighlighter.h  pari.cpp  qmlsyntaxhighlighter.cpp  qmlsyntaxhighlighter.h  settings.cpp  settings.h  shellsyntaxhighlighter.cpp  syntaxhighlighterprovider.cpp  syntaxhighlighterprovider.h  syntaxtheme.cpp  syntaxtheme.h  textdocumentsearcher.h  toolmanager.cpp  toolmanager.h
src/core/: diffutils.cpp  filesystem.cpp  filesystem.h  pari.cpp  settings.cpp  settings.h
src/editor/: documentmanager.cpp  documentmanager.h  editormanager.cpp  editormanager.h  textdocument.cpp  textdocument.h
src/formatting/: cppsyntaxhighlighter.h  markdownsyntaxhighlighter.h  syntaxhighlighterprovider.cpp  syntaxhighlighterprovider.h
src/integrations/: gitlogmodel.h  gitmanager.cpp  gitmanager.h  llm.cpp  lspclient.cpp  toolmanager.cpp  toolmanager.h
src/qml/: AboutWindow.qml  BuildConfigurationDialog.qml  ChatLogWindow.qml  CodeEditorPane.qml  ColorButton.qml  CustomStatusBar.qml  FileTreeDelegate.qml  FileTreeFindBar.qml  FindOverlay.qml  GitOutputWindow.qml  OutputPane.qml  PariAppWindow.qml  SettingsDialog.qml  SettingsWindow.qml  pari.qml  qml.qrc
tests/: CMakeLists.txt  main.cpp  test_buildmanager.cpp  test_buildmanager.h  test_cppsyntaxhighlighter.cpp  test_cppsyntaxhighlighter.h  test_diffutils.cpp  test_diffutils.h  test_documentmanager.cpp  test_documentmanager.h  test_editormanager.cpp  test_editormanager.h  test_filesystem.cpp  test_filesystem.h  test_gitlogmodel.cpp  test_gitlogmodel.h  test_gitmanager.cpp  test_gitmanager.h  test_llm.cpp  test_llm.h  test_lspclient.cpp  test_lspclient.h  test_markdownformatter.cpp  test_markdownformatter.h  test_markdownsyntaxhighlighter.cpp  test_markdownsyntaxhighlighter.h  test_qmlsyntaxhighlighter.cpp  test_qmlsyntaxhighlighter.h  test_settings.cpp  test_settings.h  test_shellsyntaxhighlighter.cpp  test_shellsyntaxhighlighter.h  test_toolmanager.cpp  test_toolmanager.h  tests.pro
