add_executable(tst_all
    main.cpp
    test_settings.cpp
    test_settings.h
    test_filesystem.cpp
    test_filesystem.h
    test_markdownformatter.cpp
    test_markdownformatter.h
    test_llm.cpp
    test_llm.h
    test_cppsyntaxhighlighter.cpp
    test_cppsyntaxhighlighter.h
    test_qmlsyntaxhighlighter.cpp
    test_qmlsyntaxhighlighter.h
    test_shellsyntaxhighlighter.cpp
    test_shellsyntaxhighlighter.h
    test_diffutils.cpp
    test_diffutils.h
    test_markdownsyntaxhighlighter.cpp
    test_markdownsyntaxhighlighter.h
    test_buildmanager.cpp
    test_buildmanager.h
    test_toolmanager.cpp
    test_toolmanager.h
    test_gitlogmodel.cpp
    test_gitlogmodel.h
    test_gitmanager.cpp
    test_gitmanager.h
    test_editormanager.cpp
    test_editormanager.h
    ../src/editor/editormanager.cpp
    ../src/editor/editormanager.h
    ../src/core/settings.cpp
    ../src/core/settings.h
    ../src/core/filesystem.cpp
    ../src/core/filesystem.h
    ../src/formatting/markdownformatter.cpp
    ../src/formatting/markdownformatter.h
    ../src/integrations/llm.cpp
    ../src/integrations/llm.h
    ../src/formatting/cppsyntaxhighlighter.cpp
    ../src/formatting/cppsyntaxhighlighter.h
    ../src/formatting/qmlsyntaxhighlighter.cpp
    ../src/formatting/qmlsyntaxhighlighter.h
    ../src/formatting/shellsyntaxhighlighter.cpp
    ../src/formatting/shellsyntaxhighlighter.h
    ../src/core/diffutils.cpp
    ../src/core/diffutils.h
    ../src/formatting/syntaxtheme.cpp
    ../src/formatting/syntaxtheme.h
    ../src/formatting/markdownsyntaxhighlighter.cpp
    ../src/formatting/markdownsyntaxhighlighter.h
    ../src/integrations/buildmanager.cpp
    ../src/integrations/buildmanager.h
    ../src/integrations/toolmanager.cpp
    ../src/integrations/toolmanager.h
    ../src/integrations/gitlogmodel.cpp
    ../src/integrations/gitlogmodel.h
    ../src/integrations/gitmanager.cpp
    ../src/integrations/gitmanager.h
)

target_include_directories(tst_all PRIVATE ../src ../src/core ../src/editor ../src/formatting ../src/integrations)

target_link_libraries(tst_all PRIVATE
    Qt6::Test
    Qt6::Core
    Qt6::Network
    Qt6::Widgets
)

add_test(NAME AllTests COMMAND tst_all)
